[gd_scene load_steps=10 format=2]

[ext_resource path="res://resources/scripts/Statistics.gd" type="Script" id=1]
[ext_resource path="res://resources/backgrounds/mastersrelm.png" type="Texture" id=2]
[ext_resource path="res://resources/gamefonts/Pacifico.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://resources/gamefonts/SEVESBRG.TTF" type="DynamicFontData" id=4]
[ext_resource path="res://resources/icon/back.png" type="Texture" id=5]
[ext_resource path="res://admob-lib/admob.gd" type="Script" id=6]

[sub_resource type="DynamicFont" id=1]
size = 70
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=2]
size = 100
font_data = ExtResource( 4 )

[sub_resource type="DynamicFont" id=3]
size = 100
font_data = ExtResource( 4 )

[node name="Statistics" type="Node2D"]
script = ExtResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 2 )
centered = false

[node name="Control" type="Control" parent="."]
margin_top = 2.99664
margin_right = 1920.0
margin_bottom = 1083.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BC" type="Label" parent="Control"]
margin_left = 51.0102
margin_top = 207.152
margin_right = 552.01
margin_bottom = 357.152
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0.0823529, 0.854902, 0.133333, 1 )
text = "BoulderCount:"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BCNumber" type="Label" parent="Control"]
margin_left = 550.194
margin_top = 192.223
margin_right = 1265.19
margin_bottom = 361.223
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0.0823529, 0.854902, 0.133333, 1 )
text = "0"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="GM" type="Label" parent="Control"]
margin_left = 52.0339
margin_top = 348.783
margin_right = 477.034
margin_bottom = 517.783
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0.0823529, 0.854902, 0.133333, 1 )
text = "Games Played:"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="GMNumber" type="Label" parent="Control"]
margin_left = 550.194
margin_top = 350.614
margin_right = 1265.19
margin_bottom = 519.614
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0.0823529, 0.854902, 0.133333, 1 )
text = "0"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PC" type="Label" parent="Control"]
margin_left = 19.078
margin_top = 483.18
margin_right = 624.078
margin_bottom = 633.18
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0.0823529, 0.854902, 0.133333, 1 )
text = "Planes Purchased:"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PCNumber" type="Label" parent="Control"]
margin_left = 565.177
margin_top = 485.183
margin_right = 1280.18
margin_bottom = 654.183
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0.0823529, 0.854902, 0.133333, 1 )
text = "0"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BUC" type="Label" parent="Control"]
margin_left = 26.0178
margin_top = 612.348
margin_right = 682.018
margin_bottom = 762.348
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0.0823529, 0.854902, 0.133333, 1 )
text = "BulletSkins Purhased:"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BUCNumber" type="Label" parent="Control"]
margin_left = 710.898
margin_top = 617.175
margin_right = 1425.9
margin_bottom = 786.175
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0.0823529, 0.854902, 0.133333, 1 )
text = "0"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HighScoreLabel" type="Label" parent="Control"]
margin_left = 207.0
margin_top = 791.0
margin_right = 771.0
margin_bottom = 892.0
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 0.0823529, 0.854902, 0.133333, 1 )
text = "HIGHSCORE:"
align = 1

[node name="HighScoreTag" type="Label" parent="Control"]
margin_left = 794.0
margin_top = 758.0
margin_right = 1775.0
margin_bottom = 922.0
custom_fonts/font = SubResource( 3 )
custom_colors/font_color = Color( 0.0823529, 0.854902, 0.133333, 1 )
text = "0"
valign = 1

[node name="BackButton" type="Button" parent="Control"]
margin_left = 34.0
margin_top = 39.0
margin_right = 334.0
margin_bottom = 149.0
icon = ExtResource( 5 )
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AdMob" type="Node" parent="Control"]
script = ExtResource( 6 )
is_real = true
banner_on_top = false
banner_id = "ca-app-pub-9093002613352397/9703314252"
interstitial_id = "ca-app-pub-9093002613352397/4401642844"
rewarded_id = "ca-app-pub-9093002613352397/2049127463"
[connection signal="pressed" from="Control/BackButton" to="." method="_on_BackButton_pressed"]
